# oxtail

./: Cargo.toml  README.md
.github/workflows/: release-event.json  release.yml
src/: commands.rs  file_watcher.rs  log_entry.rs  log_storage.rs  main.rs  process_handler.rs  settings.rs  stdin_reader.rs  ui.rs
src/widgets/: command_prompt.rs  log_viewer.rs  mod.rs
