[package]
name = "oxtail"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ratatui = { version = "0.24.0", features = ["termion"] }
termion = "2.0.3"
anyhow = "1.0"
regex = "1.9"
chrono = "0.4"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
crossbeam-channel = "0.5"
# Added missing dependencies
clap = { version = "4.4", features = ["derive"] }
strip-ansi-escapes = "0.2"
notify = "5.1"
atty = "0.2"
unicode-width = "0.2.0"
ansi-parser = "0.9.1"
